# astichi

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dev-docs/: AstichiApiDesignComplete.md  AstichiApiDesignComposed.md  AstichiApiDesignProposal.md  AstichiApiDesignV1-BindExternal.md  AstichiApiDesignV1-CompositionUnification.md  AstichiApiDesignV1-InsertExpression.md  AstichiApiDesignV1-MarkerPreservingEmit.md  AstichiApiDesignV1-UnrollRevision.md  AstichiApiDesignV1.md  AstichiBindBuilderDesign.md  AstichiCodingRules.md  AstichiCommentsProposal.md  AstichiComposableSelfDescription.md  AstichiCompositionModel.md  AstichiDataDrivenBuilderApi.md  AstichiDecriptorAPIProposal.md  AstichiFixNoEnumViolations.md  AstichiImplementationBoundaries.md  AstichiImportProposal.md  AstichiImportProposalDetailedCodingPlan.md  AstichiImportProposalDetailedReccomendations.md  AstichiImportProposedEnhancements.md  AstichiInternalsDesignV1.md  AstichiSingleSourceSummary.md  AstichiUserDocumentationPlan.md  AstichiV1Milestones.md  AstichiV2TestAugments.md  AstichiV3CallArgumentImplementationPlan.md  AstichiV3ExternalRefBind.m4  AstichiV3ParameterHoleSpec.md  AstichiV3TargetAdditionalHoleShapes.md  AstichiV3TestPlan.md  AtichiBuildResolverProposal.md  BoundaryScopePolicyProposal.md  IdentifierHygieneRequirements.md  README.md  V1Plan.md  V1ProgressRegister.md  V1StartHere.md  V2Plan.md  (+2 more)
dev-docs/historical/: AstichiApiDesignProposal.md  AstichiApiDesignV1-BindExternal.md  AstichiApiDesignV1-CompositionUnification.md  AstichiApiDesignV1-InsertExpression.md  AstichiApiDesignV1.md  AstichiComposableSelfDescription.md  AstichiDataDrivenBuilderApi.md  AstichiFixNoEnumViolations.md  AstichiImplementationBoundaries.md  AstichiMultiBindFixPlan.md  AstichiV1Milestones.md  AstichiV3CallArgumentAddendum.md  AstichiV3ExternalRefBind.m4  AstichiV3ParameterHoleImplementationPlan.md  README.md  V1Plan.md  (+5 more)
docs/: README.md
scripts/: generate_reference_snippet_outputs.py
tests/: README.md  test_arg_identifier_kwarg.py  test_ast_goldens.py  test_ast_provenance.py  test_asttools.py  test_bind_external.py  test_boundaries.py  test_build_merge.py  test_builder_handles.py  test_builder_raw.py  test_call_arg_hole_anchor.py  test_call_argument_payload_materialize.py  test_call_argument_payload_model.py  test_call_argument_payload_recognition.py  test_comments.py  test_descriptors.py  test_diagnostics_formatting.py  test_emit.py  test_expression_insert_pipeline.py  test_external_bind.py  test_external_ref.py  test_external_values.py  test_frontend_compile.py  test_hygiene.py  test_lowering_markers.py  test_lowering_shapes.py  test_materialize.py  test_model.py  test_parameter_holes.py  test_placeholder.py  test_pyimport_phase1.py  test_staged_build_refs_and_bindings.py  test_unroll.py  test_unroll_domain.py  test_v3_staged.py  test_versioned_test_harness.py  versioned_test_harness.py
(+313 files in other folders)
