[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "astichi"
version = "0.1.0"
description = "AST composition helpers: markers, hygiene, lifting, and lowering for composable Python code generation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "astichi contributors" }]
license = { file = "LICENSE" }
keywords = ["ast", "codegen", "composition", "compiler"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
test = ["pytest>=7.0"]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/astichi", "tests", "dev-docs", "scratch", "LICENSE", "README.md"]

# Run: uv run --with pytest pytest -q
# Focused: uv run --with pytest pytest <test-path> -q
[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.astichi.test-matrix]
python = ["3.12", "3.13", "3.14", "3.15"]

# Hatchling uses `src/` layout; Pyright/Basedpyright need the same path so
# `import astichi` resolves when analyzing files under `docs/` (and from the
# monorepo root, see `../pyrightconfig.json`).
[tool.pyright]
extraPaths = ["src"]

[tool.basedpyright]
extraPaths = ["src"]
